# Crunched

./: .gitignore  README.md  main.py
backend/: agent.py  main.py  models.py  orchestrator.py  pyproject.toml  tools.py
backend/experts/: base.py  bond_pricing.py  general.py
crunched-addin/src/taskpane/: taskpane.ts
crunched-addin/src/taskpane/components/: App.tsx
excel/: .gitignore  README.md  pyproject.toml
excel/backend/: main.py  orchestrator.py  tools.py
excel/backend/experts/: __init__.py  general.py
excel/crunched-addin/: manifest.xml  package-lock.json
excel/crunched-addin/src/taskpane/: taskpane.ts
excel/crunched-addin/src/taskpane/components/: App.tsx
powerpoint/: .gitignore
powerpoint/PowerPoint Agent/: PLAN.md  README.md  manifest.json  manifest.xml  package-lock.json  package.json
powerpoint/PowerPoint Agent/backend/: main.py  models.py  pyproject.toml
powerpoint/PowerPoint Agent/backend/agents/: __init__.py  arranger.py  scene_analyzer.py  script_generator.py
powerpoint/PowerPoint Agent/src/taskpane/: taskpane.ts
powerpoint/PowerPoint Agent/src/taskpane/components/: App.tsx
