[project]
name = "crunched-backend"
version = "0.1.0"
description = "Backend for Crunched Excel add-in"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "anthropic>=0.42.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
